// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AsyncQuestion Integration GET /asyncQuestions/:courseId allows students to view their questions in their course 1`] = `
[
  {
    "aiAnswerText": "q1",
    "answerText": "answer",
    "closedAt": null,
    "comments": [],
    "courseId": 1,
    "createdAt": "2025-01-01T00:00:00.000Z",
    "creator": {
      "id": 2,
      "name": "justin oh",
      "photoURL": "https://example.com",
    },
    "creatorId": 2,
    "id": 1,
    "questionAbstract": "abstract",
    "questionText": "text",
    "questionTypes": [],
    "status": "AIAnswered",
    "taHelpedId": null,
    "verified": false,
    "visible": false,
    "votes": [],
    "votesSum": 0,
  },
  {
    "aiAnswerText": "q2",
    "answerText": "answer",
    "closedAt": null,
    "comments": [],
    "courseId": 1,
    "createdAt": "2025-01-01T00:00:00.000Z",
    "creator": {
      "id": 2,
      "name": "justin oh",
      "photoURL": "https://example.com",
    },
    "creatorId": 2,
    "id": 2,
    "questionAbstract": "abstract",
    "questionText": "text",
    "questionTypes": [],
    "status": "AIAnswered",
    "taHelpedId": null,
    "verified": false,
    "visible": true,
    "votes": [],
    "votesSum": 0,
  },
]
`;

exports[`AsyncQuestion Integration GET /asyncQuestions/:courseId does not show sensitive information for comments on questions unless they are the creator or staff 1`] = `
{
  "staff": [
    {
      "aiAnswerText": "q2",
      "answerText": "answer",
      "closedAt": null,
      "comments": [
        {
          "commentText": "comment1",
          "createdAt": "2025-01-02T00:00:00.000Z",
          "creator": {
            "courseRole": "student",
            "id": 2,
            "name": "justin oh",
            "photoURL": "https://example.com",
          },
          "creatorId": 2,
          "id": 1,
          "questionId": 2,
        },
        {
          "commentText": "comment2",
          "createdAt": "2025-01-02T00:00:00.000Z",
          "creator": {
            "courseRole": "student",
            "id": 3,
            "name": "tom oh",
            "photoURL": "https://example.com",
          },
          "creatorId": 3,
          "id": 2,
          "questionId": 2,
        },
      ],
      "courseId": 1,
      "createdAt": "2025-01-01T00:00:00.000Z",
      "creator": {
        "id": 2,
        "name": "justin oh",
        "photoURL": "https://example.com",
      },
      "creatorId": 2,
      "id": 2,
      "questionAbstract": "abstract",
      "questionText": "text",
      "questionTypes": [],
      "status": "AIAnswered",
      "taHelpedId": null,
      "verified": false,
      "visible": true,
      "votes": [],
      "votesSum": 0,
    },
    {
      "aiAnswerText": "q3",
      "answerText": "answer",
      "closedAt": null,
      "comments": [],
      "courseId": 1,
      "createdAt": "2025-01-01T00:00:00.000Z",
      "creator": {
        "id": 3,
        "name": "tom oh",
        "photoURL": "https://example.com",
      },
      "creatorId": 3,
      "id": 3,
      "questionAbstract": "abstract",
      "questionText": "text",
      "questionTypes": [],
      "status": "AIAnswered",
      "taHelpedId": null,
      "verified": false,
      "visible": false,
      "votes": [],
      "votesSum": 0,
    },
    {
      "aiAnswerText": "q1",
      "answerText": "answer",
      "closedAt": null,
      "comments": [],
      "courseId": 1,
      "createdAt": "2025-01-01T00:00:00.000Z",
      "creator": {
        "id": 2,
        "name": "justin oh",
        "photoURL": "https://example.com",
      },
      "creatorId": 2,
      "id": 1,
      "questionAbstract": "abstract",
      "questionText": "text",
      "questionTypes": [],
      "status": "AIAnswered",
      "taHelpedId": null,
      "verified": false,
      "visible": false,
      "votes": [],
      "votesSum": 0,
    },
  ],
  "student": [
    {
      "aiAnswerText": "q2",
      "answerText": "answer",
      "closedAt": null,
      "comments": [
        {
          "commentText": "comment1",
          "createdAt": "2025-01-02T00:00:00.000Z",
          "creator": {
            "courseRole": "student",
            "id": 2,
            "name": "Anonymous",
            "photoURL": null,
          },
          "creatorId": 2,
          "id": 1,
          "questionId": 2,
        },
        {
          "commentText": "comment2",
          "createdAt": "2025-01-02T00:00:00.000Z",
          "creator": {
            "courseRole": "student",
            "id": 3,
            "name": "tom oh",
            "photoURL": "https://example.com",
          },
          "creatorId": 3,
          "id": 2,
          "questionId": 2,
        },
      ],
      "courseId": 1,
      "createdAt": "2025-01-01T00:00:00.000Z",
      "creator": {
        "id": 2,
        "name": "Anonymous",
        "photoURL": null,
      },
      "creatorId": 2,
      "id": 2,
      "questionAbstract": "abstract",
      "questionText": "text",
      "questionTypes": [],
      "status": "AIAnswered",
      "taHelpedId": null,
      "verified": false,
      "visible": true,
      "votes": [],
      "votesSum": 0,
    },
    {
      "aiAnswerText": "q3",
      "answerText": "answer",
      "closedAt": null,
      "comments": [],
      "courseId": 1,
      "createdAt": "2025-01-01T00:00:00.000Z",
      "creator": {
        "id": 3,
        "name": "tom oh",
        "photoURL": "https://example.com",
      },
      "creatorId": 3,
      "id": 3,
      "questionAbstract": "abstract",
      "questionText": "text",
      "questionTypes": [],
      "status": "AIAnswered",
      "taHelpedId": null,
      "verified": false,
      "visible": false,
      "votes": [],
      "votesSum": 0,
    },
  ],
}
`;
